log
Thu 25 Apr 2024 04:25:09 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: lvalue required as left operand of assignment
   57 |     map->size = 0;
      |               ^
Compilation failed
72ef2b5
Thu 25 Apr 2024 04:26:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2f458ac
Thu 25 Apr 2024 05:52:47 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 30/70
912f20d
Thu 25 Apr 2024 06:23:53 AM UTC: 
 hashmap.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
 tests:  6|3
total_score: 40/70
73bf6f1
Thu 25 Apr 2024 06:31:14 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|3
total_score: 40/70
8b5f388
Thu 25 Apr 2024 06:31:31 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
a8d5dfc
Thu 25 Apr 2024 06:32:06 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
cad3eaf
Thu 25 Apr 2024 06:36:47 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|3
total_score: 40/70
80b867b
Thu 25 Apr 2024 03:05:39 PM UTC: 
 hashmap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  6|3
total_score: 40/70
4ceb7e2
Sun 28 Apr 2024 01:45:29 AM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  9|2
total_score: 50/70
7ad77bd
Sun 28 Apr 2024 01:49:38 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
12cc896
Sun 28 Apr 2024 01:55:04 AM UTC: 
 hashmap.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
  118 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6851c1e
Sun 28 Apr 2024 01:55:16 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
7f1e660
